--- a/content/city/tiles/road_4_way/_config.yml
+++ b/content/city/tiles/road_4_way/_config.yml
@@ -1,45 +1,37 @@
 views:
   north_west:
+    deg_0:
+      base: none
     deg_90:
       base: none
-    deg_0:
-      base:
-        flip_h: true
+    deg_180:
+      base: none
     deg_270:
       base: none
-    deg_180:
-      base:
-        flip_h: true
   north_east:
     deg_0:
       base: none
     deg_90:
-      base:
-        flip_h: true
+      base: none
     deg_180:
       base: none
     deg_270:
-      base:
-        flip_h: true
+      base: none
   south_west:
     deg_0:
       base: none
     deg_90:
-      base:
-        flip_h: true
+      base: none
     deg_180:
       base: none
     deg_270:
-      base:
-        flip_h: true
+      base: none
   south_east:
+    deg_0:
+      base: none
     deg_90:
       base: none
-    deg_0:
-      base:
-        flip_h: true
+    deg_180:
+      base: none
     deg_270:
       base: none
-    deg_180:
-      base:
-        flip_h: true
